# MyCo-ROS

./: README.md
docs/: API_description.md  API_description_english.md  Fix_ESI.md  Fix_ESI_english.md  TorqueFF_HWI.md  TorqueFF_HWI_english.md  Torque_HWI.md  Torque_HWI_english.md  VelTrqFF_HWI.md  VelTrqFF_HWI_english.md
myco_10_1000mm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
myco_10_1000mm_moveit_config/config/: MyCo-10-1.00.srdf  kinematics.yaml  ros_controllers.yaml
myco_10_1000mm_moveit_config/launch/: chomp_planning_pipeline.launch.xml  (+18 more)
myco_15_1300mm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
myco_3_590mm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
myco_3_5_950mm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
myco_5_800mm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
myco_8_1300mm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
myco_basic_api/: CMakeLists.txt  package.xml
myco_description/: CMakeLists.txt  package.xml  urdf.rviz
myco_ethercat_driver/: CMakeLists.txt  package.xml
myco_gazebo/: CMakeLists.txt  package.xml
myco_hardware_interface/: CMakeLists.txt  package.xml
myco_postrq_joint_trajectory_controller/: CMakeLists.txt  myco_postrq_joint_trajectory_plugins.xml  package.xml
myco_posvel_joint_trajectory_controller/: CMakeLists.txt  myco_posvel_joint_trajectory_plugins.xml  package.xml
myco_robot/: CMakeLists.txt  package.xml
myco_robot_bringup/: CMakeLists.txt  package.xml
myco_robot_bringup/config/: myco_arm_control.yaml  myco_drivers.yaml  myco_module_control.yaml
myco_robot_bringup/launch/: MyCo-10-1.00_bringup.launch  MyCo-15-1.30_bringup.launch  MyCo-3-0.59_bringup.launch  MyCo-3.5-0.95_bringup.launch  MyCo-5-0.80_bringup.launch  MyCo-8-1.30_bringup.launch  myco_ros_control.launch
myco_robot_bringup/script/: cmd_pub.py  elfin_module_cmd_pub.py  elfin_module_stop.py  set_velocity_scaling.py
myco_robot_msgs/: CMakeLists.txt  package.xml
myco_robot_servo/: CMakeLists.txt  README.md  package.xml
myco_ros_control/: CMakeLists.txt  package.xml
(+152 files in other folders)
